Shadow effects and fixing alignment

--- a/style.css
+++ b/style.css
@@ -25,6 +25,11 @@
     border-radius: 10px;
     margin-bottom: 50px;
     background-color: rgb(250, 250, 244);
+    margin-top:50px;
+    box-shadow:
+        inset 
+        0 0 0 2px white,
+        0.3em 0.3em 1em rgba(0, 0, 0, 0.6);
 
 }
 
@@ -36,8 +41,12 @@ img {
 }
 
 
-h1,h2,#navbar, p, li {
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+h1,h2,h3,#navbar {
+    font-family:Georgia, 'Times New Roman', Times, serif
+}
+
+p, li {
+    font-family:Arial, Helvetica, sans-serif;
 }
 
 h1 {
@@ -58,17 +67,40 @@ body {
 
 .right-content {
     width:750px;
+
 }
 
 .right-subcontent {
     padding:50px;
     border-radius:10px;
-    width:690px;
+    width:750px;
     background-color: rgb(250, 250, 244);
+    box-shadow:
+    inset 
+        0 0 0 2px white,
+        0.3em 0.3em 1em rgba(0, 0, 0, 0.6);
 }
 
 .left-content {
     margin-right:50px;
+    background-color: rgb(250, 250, 244);
+    border-radius:10px;
+    max-height:400px;
+    margin-top:50px;
+    box-shadow:
+        inset 
+        0 0 0 2px white,
+        0.3em 0.3em 1em rgba(0, 0, 0, 0.6);
+    min-width:325px;
+    max-width:325px;
+}
+
+.left-content img {
+    margin-right:50px;
+}
+
+.left-content p {
+    padding:20px;
 }
 
 #edandclubs{
